--- a/src/app/secondary-components/recommendations/recommendations.component.css
+++ b/src/app/secondary-components/recommendations/recommendations.component.css
@@ -3,6 +3,8 @@
     padding: 3rem 0;
     min-height: 100%;
     overflow-y: auto;
+    overflow-x: hidden;
+    max-width: 100%;
 }
 
 .recommendations-title {
